2004-09-08  Marek Safar  <marek.safar@seznam.cz>

	* Marshal.cs: Class is static in NET_2_0.

2004-07-29  Lluis Sanchez Gual  <lluis@novell.com>

	* RuntimeEnvironment.cs: Implemented SystemConfigurationFile and
	  GetSystemVersion().

Wed Jul 14 19:28:57 CEST 2004 Paolo Molaro <lupus@ximian.com>

	* GCHandle.cs: throw exception if the result from AddrOfPinnedObject()
	is -1 (special value returned by the runtime).

2004-07-07  Sebastien Pouliot  <sebastien@ximian.com>

	* _Exception.cs: New interface in Fx 2.0 to preserve member's order
	for COM interop.

2004-06-22  Raja R Harinath  <rharinath@novell.com>

	Fix bootstrap with mcs 0.31.
	* UnmanagedType.cs (UnmanagedType.__mono_bootstrap_NativeTypeMax): 
	New bootstrap-only constant.

2004-06-18  Raja R Harinath  <rharinath@novell.com>

	Fix breaking build (see tests/test-272.cs).  Since corlib is a
	bootstrap library, we have to keep this fix even if the in-tree
	mcs compiler is fixed.
	* UCOMIEnumConnections.cs: Replace '(UnmanagedType) 80' in
	attribute field initialization with Consts.UnmanagedType_80.
	* UCOMIEnumMoniker.cs: Likewise.
	* UCOMIEnumString.cs: Likewise.
	* UCOMIStream.cs: Likewise.
	* UCOMITypeInfo.cs: Likewise.
	* UCOMITypeLib.cs: Likewise.

2004-06-18  Gert Driesen <drieseng@users.sourceforge.net>

	* BINDPTR.cs: have layout and charset match MS.NET
	* CONNECTDATA.cs: have layout and charset match MS.NET
	* DISPPARAMS.cs: have layout and charset match MS.NET
	* ELEMDESC.cs: have layout and charset match MS.NET
	* EXCEPINFO.cs: have layout and charset match MS.NET
	* IDLDESC.cs: have layout and charset match MS.NET
	* PARAMDESC.cs: have layout and charset match MS.NET
	* STATSTG.cs: have layout and charset match MS.NET
	* TYPEATTR.cs: have layout and charset match MS.NET
	* TYPEDESC.cs: have layout and charset match MS.NET
 	* TYPELIBATTR.cs: have layout and charset match MS.NET
	* VARDESC.cs: have layout and charset match MS.NET

2004-06-18  Gert Driesen <drieseng@users.sourceforge.net>
